css/style.css
/*typography*/
* {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

body {
  font-family: "Raleway";
  font-weight: 300;
  font-size: 0.875rem;
  color: #2d2d2d;
}

h1 {
  font-size: 1.125rem;
  text-transform: uppercase;
  color: white;
  font-weight: 500;
  font-style: normal;
  text-shadow: 2px 2px 4px hsla(0, 0%, 39%, 0.8);
}

h2 {
  font-family: "Playfair Display";
  font-size: 2.5rem;
  color: white;
  padding-top: 0.938rem;
  text-shadow: 2px 2px 4px hsla(0, 0%, 39%, 0.8);
}

h3 {
  font-family: "Playfair Display";
  font-size: 1.875rem;
  padding-bottom: 1.25rem;
}

h4 {
  font-family: "Raleway";
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.75rem;
  font-style: normal;
  color: #969696;
}

h5 {
  font-family: "Playfair Display";
  font-size: 1.313rem;
  padding: 1rem;
  color: #e2574c;
}

h6 {
  font-family: "Raleway";
  font-weight: 500;
  font-style: normal;
  color: #969696;
}

p {
  line-height: 2;
  font-size: 0.875rem;
}

main {
  text-align: center;
}

nav {
  font-size: 0.875rem;
  text-transform: uppercase;
  font-weight: 500;
  font-style: normal;
}

em {
  font-style: italic;
}

strong {
  font-weight: bold;
}

ul {
  display: flex;
  flex-direction: row;
}

.nav-space {
  padding: 1rem;
}

a {
  color: #e2574c;
  text-decoration: none;
}

header {
  padding: 0px;
}

/* Container classes */

.container-about {
  width: 90%;
  margin: 0 auto;
  padding-top: 3rem;
  padding-bottom: 3rem;
}

.container-header {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  max-width: 1240px;
  margin: 0 auto;
  padding: 0.625rem;
}

.container-large {
  width: 100%;
  margin: 0 auto;
}

.container-featured {
  width: 100%;
  margin: 0 auto;
  padding-top: 10rem;
  height: 40rem;
}

.container-contact {
  width: 90%;
  font-family: "Playfair Display";
  padding-top: 3rem;
}

.container-social {
  display: flex;
  justify-content: center;
  width: 40%;
  padding-bottom: 10rem;
  padding-top: 1rem;
}

.container-updates {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 90%;
  margin: 0 auto;
  padding: 0.625rem;
}

.container-updates span {
  margin-left: 1rem;
}

/* SHOP BOXES */

.container-shop {
  display: flex;
  flex-flow: row wrap;
  width: 100%;
}

.category {
  color: white;
  text-transform: uppercase;
  text-shadow: 2px 2px 4px hsla(0, 0%, 39%, 0.8);
  font-size: 1.4rem;
  font-weight: 500;
  height: 25vw;
}
/* mens */
.category:nth-child(1) {
  /*background-color: blue;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/mens-category.jpg);
  background-position: center bottom;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  border-bottom: 0.25rem solid white;
}

/* trends */
.category:nth-child(2) {
  /*background-color: green;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/trends-category.jpg);
  background-position: 50% center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  border-bottom: 0.25rem solid white;
  border-top: 0.25rem solid white;
  border-right: 0.25rem solid white;
}

/* glasses */
.category:nth-child(3) {
  /*background-color: yellow;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/glasses-category.jpg);
  background-position: 50% center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  border-bottom: 0.25rem solid white;
  border-top: 0.25rem solid white;
  border-left: 0.25rem solid white;
}

/* sale */
.category:nth-child(4) {
  /*background-color: purple;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/sale-category.jpg);
  background-position: 50% center;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  border-bottom: 0.25rem solid white;
  border-top: 0.25rem solid white;
  border-right: 0.25rem solid white;
}

/* bags */
.category:nth-child(5) {
  /*background-color: magenta;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/bags-category.jpg);
  background-position: 50% bottom;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 50%;
  border-bottom: 0.25rem solid white;
  border-top: 0.25rem solid white;
  border-left: 0.25rem solid white;
}

/* womens */
.category:nth-child(6) {
  /*background-color: orange;*/
  /* padding: 3.125rem 0px; */
  background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/womens-category.jpg);
  background-position: 50% top;
  background-repeat: no-repeat;
  background-size: cover;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  border-top: 0.25rem solid white;
}

/*images*/

.banner {
  padding: 6.25rem 0rem;
  background-image: linear-gradient(rgba(2, 2, 2, 0.3), rgba(0, 0, 0, 0.3)),
    url(../images/banner-girl.png), url(../images/flower-bkgd.jpg);
  background-position: center bottom, center 60px, center;
  background-repeat: no-repeat;
  background-size: cover, 150px, cover;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  height: 400px;
}

.banner-text {
  width: 80%;
}
/* ... */

